--- a/app/styles/ap-inicio.styl
+++ b/app/styles/ap-inicio.styl
@@ -1,5 +1,71 @@
 /* INICIO */
 
+.propaContenedor
+	position absolute
+	top 220px
+	width 100%
+	color blanco
+	text-align center
 	
+	& .propa-titulo
+		font-weight bold
+		margin-bottom 40px
+		font-size 60px
+	
+	& .propa-texto
+		font-weight 300
+		font-size 30px
+		
+	& a 
+		margin-top 40px
+		
+	& p 
+		margin 0
+	
+.logosContenedor
+	max-width 750px
+	padding 20px 0
+	margin 0 auto
+	
+	& img 
+		padding 0 5px
+
+.st1
+	overflow hidden
+	display block
+	background principal
+	position relative
+		
+	& img 
+		margin-top 130px
+		display block
+		z-index 10
+		position relative
+	
+	& .texto 
+		color blanco
+		margin-top 250px
+		z-index 10
+		position relative
+
+	& h2 
+		font-weight bold
+		
+	& h5
+		font-weight 300
+		
+	& .icono-fondo
+		position absolute
+		font-size 900px
+		left -30px
+		margin-top -380px
+		
+	// & .radar 
+	// 	background-color red
+	// 	width 900px
+	// 	height 900px
+	// 	bordesCirculares(50%)
+	// 	margin-top -100px
+	// 	box()
 	
 /* FIN INICIO */
