--- a/app/styles/ap-variablesymixin.styl
+++ b/app/styles/ap-variablesymixin.styl
@@ -18,6 +18,8 @@ celeste = #00b5ff
 
 celeste2 = #00aeef
 
+celeste3 = #2196F3
+
 azul = #2d3a43
 
 verde = #1bbc9b
@@ -36,7 +38,7 @@ rosa = #a13a55
 
 violeta = #55305b
 
-principal = celeste2
+principal = celeste3
 
 
 tra(datos)
