--- a/app/views/inicio.html
+++ b/app/views/inicio.html
@@ -1,4 +1,100 @@
 <div class="row" style="overflow-x:hidden">
-  <img ng-src="{{imagenInicio}}" alt="" width="100%">
+    <img ng-src="{{imagenInicio}}" alt="" width="100%">
+    <div class="propaContenedor">
+	    <p class="propa-titulo">Encontra donde ir con amigos</p>
+	    <p class="propa-texto">Desde tu teléfono todos los boliches cercanos</p>
+	    <p class="propa-texto">y te mostramos como llegar</p>
+	    <a class="waves-effect waves-light btn-large blue">Registrate</a>
+    </div>
 </div>
-<div class="row" style="height:800px"></div>
+
+<div class="row">
+	<div class="container">
+		<div class="logosContenedor">
+			<img src="./images/logos/sunset.png">
+			<img src="./images/logos/pinar.png">
+			<img src="./images/logos/big-one.png">
+			<img src="./images/logos/club21.png">
+			<img src="./images/logos/asia-de-cuba.png">
+			<img src="./images/logos/caix.png">
+			<img src="./images/logos/jesse-james.png">
+			<img src="./images/logos/el-bosque.png">
+		</div>
+	</div>
+</div>
+
+<div class="row st1">
+	<div class="container">
+		<div class="col s12 m7">
+			<div class="texto">
+			    <h2>Donde vamos</h2>
+			    <h5>Te mostramos los boliches</h5>
+			    <h5>que esten mas cerca de vos</h5>
+			    <h5></h5>
+			    <h5></h5>
+			</div>
+		</div>
+		<div class="col s12 m5">
+			<img src="./images/st1.png">
+		</div>
+		<i class="ion-map icono-fondo"></i>
+	</div>
+</div>
+
+<div class="row bg-blanco banightonFondo">
+	<div class="container">
+		<div class="section wow" ng-class="{'fadeInRight': cambio, 'fadeIn': !cambio }" data-wow-duration="1s" data-wow-delay="1s">
+		    <div class="section centrar-texto">
+			    <h5>Todo lo que necesitas</h5>
+			    <p class="texto-gris">Para que la gente este mas informada.</p>
+			</div>
+	    </div>
+		<div class="row">
+			<div class="col s12 m6 l4 wow fadeIn" data-wow-duration="1s" data-wow-delay="1s">
+				<div class="card hoverable">
+				    <div class="card-image waves-effect waves-block waves-light">
+				        <img class="activator" src="images/pushzonales.jpg">
+				    </div>
+				    <div class="card-content">
+						<span class="card-title activator grey-text text-darken-4">Push zonales<i class="ion-more right"></i></span>
+						<p><a href="#">Ver detallado</a></p>
+				    </div>
+				    <div class="card-reveal">
+						<span class="card-title grey-text text-darken-4">Push zonales<i class="ion-close-round right"></i></span>
+						<p>Enviar mensajes zonales con eventos promos y informacion.</p>
+				    </div>
+				</div>
+			</div>
+			<div class="col s12 m6 l4 wow fadeIn" data-wow-duration="1s" data-wow-delay="1.5s">
+				<div class="card hoverable">
+				    <div class="card-image waves-effect waves-block waves-light">
+				        <img class="activator" src="images/mailing.jpg">
+				    </div>
+				    <div class="card-content">
+						<span class="card-title activator grey-text text-darken-4">Mailing<i class="ion-more right"></i></span>
+						<p><a href="#">Ver detallado</a></p>
+				    </div>
+				    <div class="card-reveal">
+						<span class="card-title grey-text text-darken-4">Mailing<i class="ion-close-round right"></i></span>
+						<p>Creamos campañas de mailing semanales con toda la informacion destacada.</p>
+				    </div>
+				</div>
+			</div>
+			<div class="col s12 m6 l4 wow fadeIn" data-wow-duration="1s" data-wow-delay="2s">
+				<div class="card hoverable">
+				    <div class="card-image waves-effect waves-block waves-light">
+				        <img class="activator" src="images/appservicios.jpg">
+				    </div>
+				    <div class="card-content">
+						<span class="card-title activator grey-text text-darken-4">APP Clientes<i class="ion-more right"></i></span>
+						<p><a href="#">Ver detallado</a></p>
+				    </div>
+				    <div class="card-reveal">
+						<span class="card-title grey-text text-darken-4">APP Clientes<i class="ion-close-round right"></i></span>
+						<p>Podes tener en tu celular una APP para podes administrar tus servicion de la forma que mas te guste.</p>
+				    </div>
+				</div>
+			</div>
+		</div>
+	</div>	
+</div>
