--- a/app/styles/ap-media-800.styl
+++ b/app/styles/ap-media-800.styl
@@ -11,3 +11,19 @@
 	#logo
 		top 5px
 		left 10px
+		
+	.propaContenedor
+		top 90px
+		
+		& .propa-titulo
+			font-weight bold
+			margin-bottom 30px
+			font-size 40px
+		
+		& .propa-texto
+			font-weight 300
+			font-size 20px
+			
+		& a 
+			margin-top 30px
+			
