--- a/app/styles/ap-inicio.styl
+++ b/app/styles/ap-inicio.styl
@@ -15,12 +15,13 @@
 	& .propa-texto
 		font-weight 300
 		font-size 30px
-		
+
 	& a 
 		margin-top 40px
 		
 	& p 
 		margin 0
+		padding 0 10px
 	
 .logosContenedor
 	max-width 750px
