--- a/app/views/inicio.html
+++ b/app/views/inicio.html
@@ -2,7 +2,7 @@
     <img ng-src="{{imagenInicio}}" alt="" width="100%">
     <div class="propaContenedor">
 	    <p class="propa-titulo">Encontra donde ir con amigos</p>
-	    <p class="propa-texto">Desde tu teléfono todos los boliches cercanos</p>
+	    <p class="propa-texto">Desde tu teléfono te damos todas las opciones</p>
 	    <p class="propa-texto">y te mostramos como llegar</p>
 	    <a class="waves-effect waves-light btn-large blue">Registrate</a>
     </div>
@@ -28,16 +28,16 @@
 		<div class="col s12 m7">
 			<div class="texto">
 			    <h2>Donde vamos</h2>
-			    <h5>Te mostramos los boliches</h5>
-			    <h5>que esten mas cerca de vos</h5>
-			    <h5></h5>
-			    <h5></h5>
+			    <h5>Te mostramos los boliches que esten </h5>
+			    <h5>mas cerca de vos</h5>
+			    <h5>Y podes ver la lista</h5>
+			    <h5>o podes verlos en el mapa</h5>
 			</div>
 		</div>
 		<div class="col s12 m5">
 			<img src="./images/st1.png">
 		</div>
-		<i class="ion-map icono-fondo"></i>
+		<i class="ion-chatboxes icono-fondo"></i>
 	</div>
 </div>
 
