--- a/app/styles/ap-media-600.styl
+++ b/app/styles/ap-media-600.styl
@@ -1,2 +1,16 @@
-//@media screen and (max-width 600px)
-	
+@media screen and (max-width 600px)
+
+	.propaContenedor
+		top 90px
+		
+		& .propa-titulo
+			font-weight bold
+			margin-bottom 30px
+			font-size 40px
+		
+		& .propa-texto
+			font-weight 300
+			font-size 20px
+			
+		& a 
+			margin-top 30px	
