--- a/app/styles/ap-basico.styl
+++ b/app/styles/ap-basico.styl
@@ -1,11 +1,14 @@
 /* BASICO */
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,100);
+//@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,100);
+
+@import url(https://fonts.googleapis.com/css?family=Signika:400,700,300);
 
 html 
 	background-color lighten(negro,5%)
 	overflow-x hidden
-	font-family 'Roboto', sans-serif
+	//font-family 'Roboto', sans-serif
+	font-family 'Signika', sans-serif
 	font-weight 400
 	
 body 
