--- a/app/styles/ap-media-600.styl
+++ b/app/styles/ap-media-600.styl
@@ -1,4 +1,14 @@
 @media screen and (max-width 600px)
+	
+	#logo
+		left 0px
+		
+		& img 
+			width 55px
+		
+		& .bno 
+			font-size 40px
+			margin-left 5px
 
 	.propaContenedor
 		top 90px
@@ -13,4 +23,6 @@
 			font-size 20px
 			
 		& a 
-			margin-top 30px	
+			margin-top 30px
+			
+	
