--- a/app/styles/style.styl
+++ b/app/styles/style.styl
@@ -2,9 +2,9 @@
 
 @import 'ap-reset.styl'
 
-@import 'ap-fuentes.styl'
-
 */
+
+@import 'ap-fuentes.styl'
 
 @import 'ap-variablesymixin.styl'
 
@@ -17,6 +17,8 @@
 @import 'ap-media-800.styl'
 
 @import 'ap-media-600.styl'
+
+@import 'ap-media-350.styl'
 
 /*
 
