--- a/app/styles/ap-fuentes.styl
+++ b/app/styles/ap-fuentes.styl
@@ -1,14 +1,14 @@
 
-// @font-face 
-//     font-family 'z_arista_lightregular'
-//     src url('../fonts/z_arista_light-webfont.eot')
-//     src url('../fonts/z_arista_light-webfont.eot?#iefix') format('embedded-opentype'),
-//          url('../fonts/z_arista_light-webfont.woff2') format('woff2'),
-//          url('../fonts/z_arista_light-webfont.woff') format('woff'),
-//          url('../fonts/z_arista_light-webfont.ttf') format('truetype'),
-//          url('../fonts/z_arista_light-webfont.svg#z_arista_lightregular') format('svg')
-//     font-weight normal
-//     font-style normal
+@font-face 
+    font-family 'z_arista_lightregular'
+    src url('../fonts/z_arista_light-webfont.eot')
+    src url('../fonts/z_arista_light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/z_arista_light-webfont.woff2') format('woff2'),
+         url('../fonts/z_arista_light-webfont.woff') format('woff'),
+         url('../fonts/z_arista_light-webfont.ttf') format('truetype'),
+         url('../fonts/z_arista_light-webfont.svg#z_arista_lightregular') format('svg')
+    font-weight normal
+    font-style normal
 
 // @font-face 
 //   font-family "Ionicons"
@@ -51,38 +51,38 @@
 //     font-weight normal
 //     font-style normal
 
-@font-face {
-    font-family: 'jk_abodelight_demo';
-    src: url('../font/JKabode/jkabode-lightdemo-webfont.eot');
-    src: url('../font/JKabode/jkabode-lightdemo-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../font/JKabode/jkabode-lightdemo-webfont.woff2') format('woff2'),
-         url('../font/JKabode/jkabode-lightdemo-webfont.woff') format('woff'),
-         url('../font/JKabode/jkabode-lightdemo-webfont.ttf') format('truetype'),
-         url('../font/JKabode/jkabode-lightdemo-webfont.svg#jk_abodelight_demo') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'jk_abodelight_demo';
+//     src: url('../font/JKabode/jkabode-lightdemo-webfont.eot');
+//     src: url('../font/JKabode/jkabode-lightdemo-webfont.eot?#iefix') format('embedded-opentype'),
+//          url('../font/JKabode/jkabode-lightdemo-webfont.woff2') format('woff2'),
+//          url('../font/JKabode/jkabode-lightdemo-webfont.woff') format('woff'),
+//          url('../font/JKabode/jkabode-lightdemo-webfont.ttf') format('truetype'),
+//          url('../font/JKabode/jkabode-lightdemo-webfont.svg#jk_abodelight_demo') format('svg');
+//     font-weight: normal;
+//     font-style: normal;
+// }
 
-@font-face {
-    font-family: 'materialdesignicons';
-    src: url('../font/material-icons/materialdesignicons-webfont.eot');
-    src: url('../font/material-icons/materialdesignicons-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../font/material-icons/materialdesignicons-webfont.woff2') format('woff2'),
-         url('../font/material-icons/materialdesignicons-webfont.woff') format('woff'),
-         url('../font/material-icons/materialdesignicons-webfont.ttf') format('truetype'),
-         url('../font/material-icons/materialdesignicons-webfont.svg#materialdesignicons') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'materialdesignicons';
+//     src: url('../font/material-icons/materialdesignicons-webfont.eot');
+//     src: url('../font/material-icons/materialdesignicons-webfont.eot?#iefix') format('embedded-opentype'),
+//          url('../font/material-icons/materialdesignicons-webfont.woff2') format('woff2'),
+//          url('../font/material-icons/materialdesignicons-webfont.woff') format('woff'),
+//          url('../font/material-icons/materialdesignicons-webfont.ttf') format('truetype'),
+//          url('../font/material-icons/materialdesignicons-webfont.svg#materialdesignicons') format('svg');
+//     font-weight: normal;
+//     font-style: normal;
+// }
 
-@font-face {
-    font-family: 'Material-Design-Icons';
-    src: url('../font/material-design-icons/Material-Design-Icons.eot');
-    src: url('../font/material-design-icons/Material-Design-Icons.eot?#iefix') format('embedded-opentype'),
-         url('../font/material-design-icons/Material-Design-Icons.woff2') format('woff2'),
-         url('../font/material-design-icons/Material-Design-Icons.woff') format('woff'),
-         url('../font/material-design-icons/Material-Design-Icons.ttf') format('truetype'),
-         url('../font/material-design-icons/Material-Design-Icons.svg#Material-Design-Icons') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'Material-Design-Icons';
+//     src: url('../font/material-design-icons/Material-Design-Icons.eot');
+//     src: url('../font/material-design-icons/Material-Design-Icons.eot?#iefix') format('embedded-opentype'),
+//          url('../font/material-design-icons/Material-Design-Icons.woff2') format('woff2'),
+//          url('../font/material-design-icons/Material-Design-Icons.woff') format('woff'),
+//          url('../font/material-design-icons/Material-Design-Icons.ttf') format('truetype'),
+//          url('../font/material-design-icons/Material-Design-Icons.svg#Material-Design-Icons') format('svg');
+//     font-weight: normal;
+//     font-style: normal;
+// }
