--- a/app/styles/ap-variablesymixin.styl
+++ b/app/styles/ap-variablesymixin.styl
@@ -34,11 +34,13 @@ amarillo = #f3d45f
 
 naranja = #f7815b
 
+naranja2 = #F4831E
+
 rosa = #a13a55
 
 violeta = #55305b
 
-principal = celeste3
+principal = verde
 
 
 tra(datos)
