--- a/app/styles/ap-inicio.styl
+++ b/app/styles/ap-inicio.styl
@@ -1,5 +1,25 @@
-/* INICIO */
+ INICIO */
 
+.triangulo1
+	width 100%
+	height 0
+	border-style solid
+	border-width 150px 950px 0 950px
+	border-color transparent negro2 negro2 negro2
+	position absolute
+	margin-bottom 90px
+	box()
+	
+.tri1 
+	width 100%
+	position absolute
+	bottom 0px
+	
+
+	
+.trio img 
+	width 100%
+	
 .propaContenedor
 	position absolute
 	top 220px
@@ -34,11 +54,11 @@
 .st1
 	overflow hidden
 	display block
-	background principal
 	position relative
+	background principal
+	margin 0
 		
 	& img 
-		margin-top 130px
 		display block
 		z-index 10
 		position relative
@@ -61,12 +81,78 @@
 		left -30px
 		margin-top -380px
 		
-	// & .radar 
-	// 	background-color red
-	// 	width 900px
-	// 	height 900px
-	// 	bordesCirculares(50%)
-	// 	margin-top -100px
-	// 	box()
+.tri2 
+	width 100%
+	position absolute
+	bottom 0px
+	left 1px
+	z-index 15
 	
-/* FIN INICIO */
+.tri3
+	width 100%
+	position absolute
+	bottom 0px
+	left 1px
+	z-index 15
+		
+.st2
+	overflow hidden
+	display block
+	background rosa
+	position relative
+	margin 0
+		
+	& img 
+		display block
+		z-index 10
+		position relative
+	
+	& .texto 
+		color blanco
+		margin-top 250px
+		z-index 10
+		position relative
+
+	& h2 
+		font-weight bold
+		
+	& h5
+		font-weight 300
+		
+	& .icono-fondo
+		position absolute
+		font-size 900px
+		right -50px
+		margin-top -390px
+		
+.st3
+	overflow hidden
+	display block
+	background violeta
+	position relative
+	margin 0
+		
+	& img 
+		display block
+		z-index 10
+		position relative
+	
+	& .texto 
+		color blanco
+		margin-top 250px
+		z-index 10
+		position relative
+
+	& h2 
+		font-weight bold
+		
+	& h5
+		font-weight 300
+		
+	& .icono-fondo
+		position absolute
+		font-size 900px
+		left -30px
+		margin-top -300px
+	
+/* FIN INICIO 
