--- a/app/views/inicio.html
+++ b/app/views/inicio.html
@@ -6,7 +6,7 @@
 	    <p class="propa-texto">y te mostramos como llegar</p>
 	    <a class="waves-effect waves-light btn-large bg-principal">Registrate</a>
     </div>
-    <img class="tri1" src="/images/tri1.svg" alt="">
+    <img class="tri1" src="./images/tri1.svg" alt="">
 </div>
 
 <div class="row">
@@ -40,7 +40,7 @@
 		</div>
 		<i class="ion-chatboxes icono-fondo"></i>
 	</div>
-	<img class="tri2" src="/images/tri2.svg" alt="">
+	<img class="tri2" src="./images/tri2.svg" alt="">
 </div>
 
 
@@ -63,7 +63,7 @@
 		</div>
 		<i class="ion-ios-people icono-fondo"></i>
 	</div>
-	<img class="tri3" src="/images/tri3.svg" alt="">
+	<img class="tri3" src="./images/tri3.svg" alt="">
 </div>
 
 <div class="row st3">
