--- a/app/styles/ap-inicio.styl
+++ b/app/styles/ap-inicio.styl
@@ -81,6 +81,11 @@
 		left -30px
 		margin-top -380px
 		
+	& .divider
+		height 2px
+		background-color darken(principal,20%)
+		border-bottom 1px solid lighten(principal,10%)
+		
 .tri2 
 	width 100%
 	position absolute
@@ -125,6 +130,11 @@
 		right -50px
 		margin-top -390px
 		
+	& .divider
+		height 2px
+		background-color darken(rosa,20%)
+		border-bottom 1px solid lighten(rosa,10%)
+		
 .st3
 	overflow hidden
 	display block
@@ -154,5 +164,20 @@
 		font-size 900px
 		left -30px
 		margin-top -300px
+		
+	& .divider
+		height 2px
+		background-color darken(violeta,20%)
+		border-bottom 1px solid lighten(violeta,10%)
+		
+.circulos
+	bordesCirculares(50%)
+	background-color amarillo
+	width 80px
+	height 80px
+	boxShadow(-10px 10px 15px alpha(negro,60%))
+	text-align center
+	line-height 80px
+	font-size 30px
 	
 /* FIN INICIO 
