--- a/app/views/inicio.html
+++ b/app/views/inicio.html
@@ -28,15 +28,17 @@
 	<div class="container">
 		<div class="col s12 m7">
 			<div class="texto">
+				<div class="circulos">1.</div>
 			    <h2>Donde vamos?</h2>
-			    <h5>Te mostramos los boliches que esten </h5>
-			    <h5>mas cerca de vos</h5>
+			    <div class="divider"></div>
+			    <h5>Te mostramos los mejores lugares</h5>
+			    <h5>que esten cerca</h5>
 			    <h5></h5>
 			    <h5></h5>
 			</div>
 		</div>
 		<div class="col s12 m5">
-			<img src="./images/phoneBase.png">
+			<img src="./images/phone1.png">
 		</div>
 		<i class="ion-chatboxes icono-fondo"></i>
 	</div>
@@ -51,7 +53,9 @@
 		</div>
 		<div class="col s12 m7">
 			<div class="texto">
+				<div class="circulos">2.</div>
 			    <h2>Que lugar nos gusta mas?</h2>
+			    <div class="divider"></div>
 			    <h5>Te damos toda la info necesaria</h5>
 			    <h5>para que puedas elegir</h5>
 			    <h5></h5>
@@ -70,7 +74,9 @@
 	<div class="container">
 		<div class="col s12 m7">
 			<div class="texto">
+				<div class="circulos">3.</div>
 			    <h2>Como llegamos?</h2>
+			    <div class="divider"></div>
 			    <h5>Te mostramos como</h5>
 			    <h5>y por donde ir</h5>
 			    <h5></h5>
@@ -86,14 +92,14 @@
 
 <div class="row bg-blanco banightonFondo">
 	<div class="container">
-		<div class="section wow" ng-class="{'fadeInRight': cambio, 'fadeIn': !cambio }" data-wow-duration="1s" data-wow-delay="1s">
+		<div class="section wow" ng-class="{'fadeInRight': cambio, 'fadeIn': !cambio }" data-wow-duration="1s">
 		    <div class="section centrar-texto">
 			    <h5>Todo lo que necesitas</h5>
 			    <p class="texto-gris">Para que la gente este mas informada.</p>
 			</div>
 	    </div>
 		<div class="row">
-			<div class="col s12 m6 l4 wow fadeIn" data-wow-duration="1s" data-wow-delay="1s">
+			<div class="col s12 m6 l4 wow fadeIn" data-wow-duration="1s">
 				<div class="card hoverable">
 				    <div class="card-image waves-effect waves-block waves-light">
 				        <img class="activator" src="images/pushzonales.jpg">
@@ -108,7 +114,7 @@
 				    </div>
 				</div>
 			</div>
-			<div class="col s12 m6 l4 wow fadeIn" data-wow-duration="1s" data-wow-delay="1.5s">
+			<div class="col s12 m6 l4 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
 				<div class="card hoverable">
 				    <div class="card-image waves-effect waves-block waves-light">
 				        <img class="activator" src="images/mailing.jpg">
@@ -123,7 +129,7 @@
 				    </div>
 				</div>
 			</div>
-			<div class="col s12 m6 l4 wow fadeIn" data-wow-duration="1s" data-wow-delay="2s">
+			<div class="col s12 m6 l4 wow fadeIn" data-wow-duration="1s" data-wow-delay="1s">
 				<div class="card hoverable">
 				    <div class="card-image waves-effect waves-block waves-light">
 				        <img class="activator" src="images/appservicios.jpg">
