--- a/app/views/inicio.html
+++ b/app/views/inicio.html
@@ -1,9 +1,9 @@
 <div class="row" style="overflow-x:hidden;position: relative;">
     <img ng-src="{{imagenInicio}}" alt="" width="100%">
     <div class="propaContenedor">
-	    <p class="propa-titulo">Encontra donde ir con amigos</p>
+	    <p class="propa-titulo">Encontra dónde ir con amigos</p>
 	    <p class="propa-texto">Desde tu teléfono te damos todas las opciones</p>
-	    <p class="propa-texto">y te mostramos como llegar</p>
+	    <p class="propa-texto">y te mostramos cómo llegar</p>
 	    <a class="waves-effect waves-light btn-large bg-principal">Registrate</a>
     </div>
     <img class="tri1" src="./images/tri1.svg" alt="">
@@ -29,7 +29,7 @@
 		<div class="col s12 m7">
 			<div class="texto">
 				<div class="circulos">1.</div>
-			    <h2>Donde vamos?</h2>
+			    <h2>Dónde vamos?</h2>
 			    <div class="divider"></div>
 			    <h5>Te mostramos los mejores lugares</h5>
 			    <h5>que esten cerca</h5>
@@ -49,12 +49,12 @@
 <div class="row st2">
 	<div class="container">
 		<div ng-show="!pushiar" class="col s12 m5">
-			<img src="./images/phoneBase.png">
+			<img src="./images/phone2.png">
 		</div>
 		<div class="col s12 m7">
 			<div class="texto">
 				<div class="circulos">2.</div>
-			    <h2>Que lugar nos gusta mas?</h2>
+			    <h2>Qué lugar nos gusta mas?</h2>
 			    <div class="divider"></div>
 			    <h5>Te damos toda la info necesaria</h5>
 			    <h5>para que puedas elegir</h5>
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 		<div ng-show="pushiar" class="col s12 m5">
-			<img src="./images/phoneBase.png">
+			<img src="./images/phone2.png">
 		</div>
 		<i class="ion-ios-people icono-fondo"></i>
 	</div>
@@ -75,16 +75,16 @@
 		<div class="col s12 m7">
 			<div class="texto">
 				<div class="circulos">3.</div>
-			    <h2>Como llegamos?</h2>
+			    <h2>Cómo llegamos?</h2>
 			    <div class="divider"></div>
-			    <h5>Te mostramos como</h5>
-			    <h5>y por donde ir</h5>
+			    <h5>Te mostramos cómo</h5>
+			    <h5>y por dónde ir</h5>
 			    <h5></h5>
 			    <h5></h5>
 			</div>
 		</div>
 		<div class="col s12 m5">
-			<img src="./images/phoneBase.png">
+			<img src="./images/phone3.png">
 		</div>
 		<i class="ion-map icono-fondo"></i>
 	</div>
@@ -95,7 +95,7 @@
 		<div class="section wow" ng-class="{'fadeInRight': cambio, 'fadeIn': !cambio }" data-wow-duration="1s">
 		    <div class="section centrar-texto">
 			    <h5>Todo lo que necesitas</h5>
-			    <p class="texto-gris">Para que la gente este mas informada.</p>
+			    <p class="texto-gris">Para que tus usuarios esten más conectados</p>
 			</div>
 	    </div>
 		<div class="row">
