--- a/app/styles/ap-inicio.styl
+++ b/app/styles/ap-inicio.styl
@@ -82,6 +82,7 @@
 		margin-top -380px
 		
 	& .divider
+		width 390px
 		height 2px
 		background-color darken(principal,20%)
 		border-bottom 1px solid lighten(principal,10%)
@@ -131,6 +132,7 @@
 		margin-top -390px
 		
 	& .divider
+		width 520px
 		height 2px
 		background-color darken(rosa,20%)
 		border-bottom 1px solid lighten(rosa,10%)
@@ -166,6 +168,7 @@
 		margin-top -300px
 		
 	& .divider
+		width 430px
 		height 2px
 		background-color darken(violeta,20%)
 		border-bottom 1px solid lighten(violeta,10%)
