--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -383,6 +383,7 @@ INICIO */,
   margin-top: -380px;
 }
 .st1 .divider {
+  width: 390px;
   height: 2px;
   background-color: #16967c;
   border-bottom: 1px solid #1fd6b0;
@@ -432,6 +433,7 @@ INICIO */,
   margin-top: -390px;
 }
 .st2 .divider {
+  width: 520px;
   height: 2px;
   background-color: #812e44;
   border-bottom: 1px solid #b64260;
@@ -467,6 +469,7 @@ INICIO */,
   margin-top: -300px;
 }
 .st3 .divider {
+  width: 430px;
   height: 2px;
   background-color: #442649;
   border-bottom: 1px solid #6c3d73;
